--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,13 @@
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 <!--			<version>2.2.7.RELEASE</version>-->
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb-reactive -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
+			<version>2.2.7.RELEASE</version>
+		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-webflux -->
 		<dependency>
