--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri = mongodb+srv://admin:admin@cluster0-lzywi.mongodb.net/KeyManagement?retryWrites=true&w=majority
-server.port = 8080
+server.port = 8083
+whoAmI = 3
